# murkml

./: .gitignore  AUDIT_FIX_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_DOWNLOAD_PLAN.md  DECISION_LOG.md  EXPANSION_PLAN.md  EXPERIMENT_PLAN.md  LICENSE  LSTM_NUTRIENT_PLAN.md  MODEL_VERSIONS.md  NTU_FINDINGS.md  PANEL_ACTION_PLAN.md  PANEL_BRIEFING_20260329.md  PANEL_BRIEFING_DATA_PATTERNS.md  PANEL_BRIEFING_FEATURE_DECISION_20260330.md  PANEL_PATTERNS_SYNTHESIS.md  PHASE4_OBSERVATIONS.md  PIPELINE.md  PRODUCT_VISION.md  README.md  RESULTS_LOG.md  ZERO_REGRESSION_REFACTOR_PLAN.md  gemini_ablation_review.md  gemini_ntu_plan_redteam.md  pyproject.toml
config/: features.yaml
dashboard/: _quarto.yml  about.qmd  adaptation.qmd  diagnostics.qmd  external.qmd  index.qmd  loads.qmd  performance.qmd  sites.qmd  uncertainty.qmd
data/: discrete_ntu_raw_89sites.parquet  exclude_sites_drop15noise.csv  exclude_sites_for_ablation.csv  site_attributes.parquet  sites_with_both_fnu_ntu.csv  train_holdout_vault_split.parquet  unknown_method_audit_report.md  unknown_method_resolution.csv  unknown_method_resolution_detail.json  unknown_method_timestamp_match.json  unknown_method_wqp_results.json  vault_sites.csv
docs/: DASHBOARD_PLAN.md  FIGURE_PLAN.md  project_lineage.md  scientific_figure_design_guide.md  training_flowchart.md  training_flowchart_refactored.md
notebooks/: 01_data_exploration.py
paper/: advisor_brief_v1.md  wrr_draft_v2.md
plans/: evaluate-model-refactor.md  master-plan.md  ntu-integration-plan.md  phase5-informed-ablation.md  (+1 more)
scripts/: evaluate.py  (+78 more)
(+400 files in other folders)
